Add bearer token and implement three requests

--- a/Library.WebApi/appsettings.json
+++ b/Library.WebApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JwtSettings": {
+    "ISSUER": "LibraryServer",
+    "AUDIENCE": "LibraryClient",
+    "KEY": "thHxx1uPmtZYc7LYY1fIbx4t2SPTNf7AeONVQJPNQb0B"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
